--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncstate/core": "^0.7.0",
+    "@syncstate/react": "^0.7.0",
+    "@syncstate/remote-client": "^0.7.0",
+    "@syncstate/remote-server": "^0.7.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
+    "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
